# DataModels

./: .gitignore  README.md  setup.cfg
src/odm2datamodels/: __init__.py  base.py  exceptions.py
src/odm2datamodels/models/: __init__.py  auth.py  core.py  cv.py  equipment.py  externalidentifiers.py  samplingfeatures.py
