
[metadata]
name = odm2datamodels
description = "Collection of object-relational mapping (ORM) data models for ODM2"
long_description = file: README.md
long_description_content = text/markdown
version = 0.0.1
author = "ODM2 Team"
author_email = ""
url = https://github.com/ODM2/ODM2DataModels
project_urls =
    bugtracker = https://github.com/ODM2/ODM2DataModels/issueshttps://github.com/pypa/sampleproject/issues
keywords='Observations Data Model ODM2'
package_dir =
    = src
packages = find:

install_requires = 
    sqlalchemy>=1.4.32
    pandas>=1.4
    geoalchemy2>=0.6.3
python_requires = >=3.8

[options.packages.find]
where = src